# AgentTeamOrchestrator

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  ato.yaml.example  pyproject.toml
.codex/: hooks.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_completion.md  suggested_commands.md
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-23-2200.md
_bmad-output/bugs/: bug-20260401-120000-zombie-tasks-after-manual-done.md  bug-20260401-122443-codex-reviewer-silent-timeout.md  bug-20260401-130433-claude-stuck-orphan-lint-processes.md  bug-20260401-133853-invalid-approval-status-crashes-orchestrator.md  bug-20260402-094200-structured-job-timeout-not-propagated.md  bug-20260402-122100-blocking-abnormal-approve-triggers-blocked.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-dev-toolchain.md  1-2-sqlite-state-persistence.md  1-3-declarative-config-engine.md  1-4a-preflight-check-engine.md  1-4b-ato-init-cli-ux.md  1-5-ato-plan-phase-preview-validation-report.md  (+106 more)
docs/: api-contracts.md  architecture.md  bug-report-2026-04-08.md  dev-guide.md  index.md  monitoring-log-2026-04-08.md  monitoring-timeline-2026-04-08.md  project-scan-report.json  root-cause-analysis-2026-04-08.md  worktree-review-merge-risk-notes-2026-04-08.md
graphify-out/: .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  manifest.json
schemas/: finding-verification.json  prototype-template.pen  review-findings.json  story-validation.json
src/ato/: batch.py  (+24 more)
tests/: conftest.py
(+186 files in other folders)
